bk_ida/gobmkida/c1/compute_surrounding_moyo_sizes
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surrounding_moyo_sizes/src/engine/dragon.c:2541:25: error: use of undeclared identifier 'byte_9AA89F'
v37 = ( unsigned __int8)byte_9AA89F[v33]; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_surrounding_moyo_sizes/src/obj/1/dragon.o] Error 1
